overlap job fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,13 +13,20 @@
  *= require_tree .
  *= require_self
  */
+input {
+  position: left;
+   transition: background .5s;
+}
 
+label {
 
+}
 
 .inline{
   margin: 10px;
   padding: 5px;
 }
+
 a {
   margin: 10px;
   padding: 10px;
@@ -30,6 +37,9 @@ a {
    text-decoration: none;
    transition: background .5s;
 }
+
+
+
  a:hover{
 
    background: #25CE4D;
@@ -92,7 +102,7 @@ body {
 }
 .header h2 {
   color: #fff;
-  font-size: 30px;
+  font-size: 15px;
   text-transform: uppercase;
 }
 .inline{
@@ -122,17 +132,14 @@ body {
 
 
 
-.nav ul {
 
-
-}
 .nav2 ul {
 
   list-style: none;
   margin: 0 auto;
   padding: 20px;
   background-color: black;
-  height: 340px;
+  height: 30px;
 }
 
 .nav ul li {
